update: README.md

--- a/test/ner.ipynb
+++ b/test/ner.ipynb
@@ -33,50 +33,75 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[NamedPerson(text='吴子豪', type='PER', base_probability=0.9995391475414932, gender=<Gender.Male: 'male'>, gender_probability=0.9970703125),\n NamedEntity(text='福州', type='LOC', base_probability=0.9997788071632385)]"
+      "text/plain": "[NamedPerson(text='吴子豪', type='PER', base_probability=0.9995428418719051, gender=<Gender.Male: 'male'>, gender_probability=0.9970703125),\n NamedEntity(text='福建', type='LOC', base_probability=0.9986373782157898),\n NamedEntity(text='福州', type='LOC', base_probability=0.9993632435798645)]"
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ner('你好, 我的名字是吴子豪, 来自福州.')"
+    "ner('你好, 我的名字是吴子豪, 来自福建福州.')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-08-04T10:18:59.754077Z",
-     "start_time": "2025-08-04T10:18:59.634077Z"
+     "end_time": "2025-08-04T10:33:45.615287Z",
+     "start_time": "2025-08-04T10:33:45.528281Z"
     }
    },
    "id": "f6a6a57a64e2e06",
-   "execution_count": 20
+   "execution_count": 23
   },
   {
    "cell_type": "code",
    "outputs": [
     {
      "data": {
-      "text/plain": "<Gender.Male: 'male'>"
+      "text/plain": "[NamedPerson(text='Vortez Wohl', type='PER', base_probability=0.9991965342072855, gender=<Gender.Male: 'male'>, gender_probability=0.87255859375)]"
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "n2g('吴子豪')"
+    "ner(\"Hi, i'm Vortez Wohl, author of DeeploTX.\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-08-04T10:18:59.800085Z",
-     "start_time": "2025-08-04T10:18:59.755080Z"
+     "end_time": "2025-08-04T10:36:54.686335Z",
+     "start_time": "2025-08-04T10:36:54.602216Z"
+    }
+   },
+   "id": "c476888fc93199fa",
+   "execution_count": 25
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(<Gender.Male: 'male'>, 1.0)"
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n2g('吴彦祖', return_probability=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-08-04T10:41:21.217867Z",
+     "start_time": "2025-08-04T10:41:21.176862Z"
     }
    },
    "id": "8c58264c20c00141",
-   "execution_count": 21
+   "execution_count": 31
   }
  ],
  "metadata": {
