--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -4,8 +4,119 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "from deeplotx import TextBinaryClassifierTrainer, LongTextEncoder\n",
+    "import logging\n",
     "\n",
+    "import torch\n",
+    "from torch import nn, optim\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "\n",
+    "from deeplotx.util import get_files, read_file\n",
+    "from deeplotx.encoder.long_text_encoder import LongTextEncoder\n",
+    "from deeplotx.nn.attention import DEFAULT_THETA\n",
+    "from deeplotx.nn.long_context_recursive_sequential import LongContextRecursiveSequential\n",
+    "\n",
+    "logger = logging.getLogger('deeplotx.trainer')\n",
+    "\n",
+    "\n",
+    "class TextBinaryClassifierTrainer:\n",
+    "    def __init__(self, long_text_encoder: LongTextEncoder, batch_size: int = 2, train_ratio: float = 0.8):\n",
+    "        self._batch_size = batch_size\n",
+    "        self._train_ratio = train_ratio\n",
+    "        self.model = None\n",
+    "        self._long_text_encoder = long_text_encoder\n",
+    "        self.device = self._long_text_encoder.device\n",
+    "        self.train_dataset_loader = None\n",
+    "        self.valid_dataset_loader = None\n",
+    "\n",
+    "    def train(self, positive_texts: list[str], negative_texts: list[str],\n",
+    "              num_epochs: int, learning_rate: float = 2e-6, balancing_dataset: bool = True,\n",
+    "              train_loss_threshold: float = 0.0, valid_loss_threshold: float = 0.0,\n",
+    "              alpha: float = 1e-4, rho: float = 0.2, encoder_layers: int = 4, attn_heads: int = 6,\n",
+    "              recursive_layers: int = 2, recursive_hidden_dim: int = 256, **kwargs) -> LongContextRecursiveSequential:\n",
+    "        if balancing_dataset:\n",
+    "            min_length = min(len(positive_texts), len(negative_texts))\n",
+    "            positive_texts = positive_texts[:min_length]\n",
+    "            negative_texts = negative_texts[:min_length]\n",
+    "        all_texts = positive_texts + negative_texts\n",
+    "        text_embeddings = [self._long_text_encoder.encode(x, flatten=False) for x in all_texts]\n",
+    "        feature_dim = text_embeddings[0].shape[-1]\n",
+    "        dtype = text_embeddings[0].dtype\n",
+    "        labels = ([torch.tensor([1.], dtype=dtype, device=self.device) for _ in range(len(positive_texts))]\n",
+    "                  + [torch.tensor([.0], dtype=dtype, device=self.device) for _ in range(len(negative_texts))])\n",
+    "        inputs = torch.stack(text_embeddings).to(self.device)\n",
+    "        labels = torch.stack(labels).to(self.device)\n",
+    "        dataset_size = len(labels)\n",
+    "        train_size = int(self._train_ratio * dataset_size)\n",
+    "        train_dataset = TensorDataset(inputs[:train_size], labels[:train_size])\n",
+    "        valid_dataset = TensorDataset(inputs[train_size:], labels[train_size:])\n",
+    "        self.train_dataset_loader = DataLoader(train_dataset, batch_size=self._batch_size, shuffle=True)\n",
+    "        self.valid_dataset_loader = DataLoader(valid_dataset, batch_size=self._batch_size, shuffle=True)\n",
+    "        if self.model is not None and self.model.in_features != feature_dim:\n",
+    "            logger.warning(\"The dimension of features doesn't match. A new model instance will be created.\")\n",
+    "            self.model = None\n",
+    "        if self.model is None:\n",
+    "            ffn_heads = kwargs.get('ffn_heads', 2)\n",
+    "            ffn_layers = kwargs.get('ffn_layers', 5)\n",
+    "            ffn_expansion_factor = kwargs.get('ffn_expansion_factor', 2)\n",
+    "            bias = kwargs.get('bias', True)\n",
+    "            dropout_rate = kwargs.get('dropout_rate', 0.1)\n",
+    "            encoder_ffn_layers = kwargs.get('encoder_ffn_layers', ffn_layers)\n",
+    "            encoder_expansion_factor = kwargs.get('encoder_expansion_factor', ffn_expansion_factor)\n",
+    "            encoder_dropout_rate = kwargs.get('encoder_dropout_rate', dropout_rate)\n",
+    "            attn_ffn_layers = kwargs.get('attn_ffn_layers', 1)\n",
+    "            attn_expansion_factor = kwargs.get('attn_expansion_factor', ffn_expansion_factor)\n",
+    "            attn_dropout_rate = kwargs.get('attn_dropout_rate', dropout_rate)\n",
+    "            theta = kwargs.get('theta', DEFAULT_THETA)\n",
+    "            self.model = LongContextRecursiveSequential(input_dim=feature_dim, output_dim=1, bias=bias,\n",
+    "                                                        encoder_layers=encoder_layers, attn_heads=attn_heads,\n",
+    "                                                        recursive_layers=recursive_layers, recursive_hidden_dim=recursive_hidden_dim,\n",
+    "                                                        ffn_layers=ffn_layers, ffn_heads=ffn_heads, ffn_expansion_factor=ffn_expansion_factor,\n",
+    "                                                        dropout_rate=dropout_rate, encoder_ffn_layers=encoder_ffn_layers,\n",
+    "                                                        encoder_expansion_factor=encoder_expansion_factor, encoder_dropout_rate=encoder_dropout_rate,\n",
+    "                                                        attn_ffn_layers=attn_ffn_layers, attn_expansion_factor=attn_expansion_factor,\n",
+    "                                                        attn_dropout_rate=attn_dropout_rate, theta=theta).initialize_weights()\n",
+    "        logger.debug(f'Training Model: \\n{self.model}')\n",
+    "        loss_function = nn.BCELoss()\n",
+    "        optimizer = optim.Adamax(self.model.parameters(), lr=learning_rate)\n",
+    "        for epoch in range(num_epochs):\n",
+    "            self.model.train()\n",
+    "            total_loss = 0.0\n",
+    "            for batch_texts, batch_labels in self.train_dataset_loader:\n",
+    "                outputs = torch.sigmoid(self.model.forward(batch_texts, self.model.initial_state(batch_texts.shape[0]))[0])\n",
+    "                loss = loss_function(outputs, batch_labels) + self.model.elastic_net(alpha=alpha, rho=rho)\n",
+    "                optimizer.zero_grad()\n",
+    "                loss.backward()\n",
+    "                optimizer.step()\n",
+    "                total_loss += loss.item()\n",
+    "            if epoch % 3 == 0:\n",
+    "                total_valid_loss = 0.0\n",
+    "                for batch_texts, batch_labels in self.valid_dataset_loader:\n",
+    "                    with torch.no_grad():\n",
+    "                        self.model.eval()\n",
+    "                        outputs = torch.sigmoid(self.model.forward(batch_texts, self.model.initial_state(batch_texts.shape[0]))[0])\n",
+    "                        loss = loss_function(outputs, batch_labels) + self.model.elastic_net(alpha=alpha, rho=rho)\n",
+    "                        total_valid_loss += loss.item()\n",
+    "                        self.model.train()\n",
+    "                logger.debug(f\"Epoch {epoch + 1}/{num_epochs} | \"\n",
+    "                             f\"Train Loss: {total_loss:.4f} | \"\n",
+    "                             f\"Valid Loss: {total_valid_loss:.4f}\")\n",
+    "                if total_valid_loss < valid_loss_threshold:\n",
+    "                    break\n",
+    "            else:\n",
+    "                logger.debug(f\"Epoch {epoch + 1}/{num_epochs} | Train Loss: {total_loss:.4f}\")\n",
+    "            if total_loss < train_loss_threshold:\n",
+    "                break\n",
+    "        return self.model\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "d7e94015a79e8446"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
     "long_text_encoder = LongTextEncoder(\n",
     "    max_length=2048,\n",
     "    chunk_size=448,\n",
@@ -29,8 +140,6 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "from deeplotx.util import get_files, read_file\n",
-    "\n",
     "pos_data_path = './data/pos'\n",
     "neg_data_path = './data/neg'\n",
     "pos_data = [read_file(x) for x in get_files(pos_data_path)]\n",
